--- a/Myerp/Tpl/Dijie/djtuanxiangmu.html
+++ b/Myerp/Tpl/Dijie/djtuanxiangmu.html
@@ -41,7 +41,7 @@
       </php>
       <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账项',<{$vol['chanpinID']}>,'<{$vol['title']}>');">
       <php>}}if(A("Method")->checkshenheback($vol['chanpinID'],'报账项')){</php>
-      <input type="button" value=" 审核回退 " name="button" onclick="shenhe_back(<{$vol['chanpinID']}>,'报账项');">
+      <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$vol['chanpinID']}>,'报账项');">
 	  <php>}</php>
             </td>
           </tr>
@@ -88,7 +88,7 @@
       </php>
       <input type="button" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账项',<{$vol['chanpinID']}>,'<{$vol['title']}>');">
       <php>}}if(A("Method")->checkshenheback($v['chanpinID'],'报账项')){</php>
-      <input type="button" value=" 审核回退 " name="button" onclick="shenhe_back(<{$v['chanpinID']}>,'报账项');">
+      <input type="button" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$v['chanpinID']}>,'报账项');">
 	  <php>}</php>
             </td>
           </tr>
