--- a/Myerp/Tpl/Dijie/header_chanpin.html
+++ b/Myerp/Tpl/Dijie/header_chanpin.html
@@ -106,7 +106,7 @@ function shenhe_after(data,status){
       </php>
       <input type="button" style="float:right" value=" <php>echo cookie('show_word');</php>成团 " name="button" onclick="doshenhe('申请');">
       <php>}}if(A("Method")->checkshenheback($chanpinID,'地接')){</php>
-      <input type="button" style="float:right" value=" 成团回退 " name="button" onclick="shenhe_back(<{$chanpinID}>,'地接');">
+      <input type="button" style="float:right" value=" 成团回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$chanpinID}>,'地接');">
 	  <php>}</php>
   <php>}</php>
   
@@ -157,7 +157,7 @@ function shenhe_after(data,status){
       </php>
       <input type="button" style="float:right" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账单',<{$baozhangID}>,'<{$baozhang[title]}>');">
       <php>}}if(A("Method")->checkshenheback($baozhangID,'报账单')){</php>
-      <input type="button" style="float:right" value=" 审核回退 " name="button" onclick="shenhe_back(<{$baozhangID}>,'报账单');">
+      <input type="button" style="float:right" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$baozhangID}>,'报账单');">
 	  <php>}</php>
   <php>}</php>
   <php>if('应收及应付' == $markpos){</php>
