--- a/Myerp/Tpl/Chanpin/header_kongguan.html
+++ b/Myerp/Tpl/Chanpin/header_kongguan.html
@@ -93,7 +93,7 @@
   <input type="button" value=" 计调打印 " name="button" class="button primary" onclick="doprint('计调打印');">
   <input type="button" value=" 打印 " name="button" class="button primary" onclick="doprint('打印');">
       <php>
-      if('单项服务' == $markpos)
+      if('单项服务' == $markpos || '团队报账单' == $markpos)
       $taskom = A("Method")->_checkOMTaskShenhe($baozhangID,'报账单');
       if(false !== $taskom){
       if(cookie('show_action') == '批准'){
