--- a/Myerp/Tpl/Chanpin/shenhe.html
+++ b/Myerp/Tpl/Chanpin/shenhe.html
@@ -124,27 +124,31 @@
                 <php>if($markpos == '收支项'){</php>
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:200px;"><div> 标题 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:300px;"><div> 团名（单项服务名） </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 团期 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:200px;"><div> 报账项标题 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 类型 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 审核阶段 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 金额 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:40px;"><div> 方式 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:200px;"><div> 备注说明 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 审核阶段 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:120px;"><div> 提交时间 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:160px;"><div> 操作 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作 </div></th>
                 </tr>
                 <php> $i = -1; foreach($chanpin_list as $v){ $i++;</php>
                 <tr height="40" class="evenListRowS1">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
-                  <td scope="row" align="left" valign="top"><{$v['title']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['type']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['shenhe_remark']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['value']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['method']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['remark']}></td>
+                  <td scope="row" align="left" valign="top">
+                  <php>if($v['tuantitle_copy']) echo $v['tuantitle_copy']; else echo $v['baozhangtitle_copy']</php>
+                  </td>
+                  <td scope="row" align="left" valign="top"><{$v['tuanqi_copy']}></td>
+                  <td scope="row" align="left" valign="top"><a href="<{:SITE_INDEX}>Chanpin/zituanxiangmu/baozhangID/<{$v['datatext_copy']['parentID']}>" target="_blank"><{$v['title_copy']}></a></td>
+                  <td scope="row" align="left" valign="top">
+                  <php>if($v['datatext_copy']['type'] == '结算项目') echo "应收"; elseif($v['datatext_copy']['type'] == '支出项目') echo "应付"; else echo $v['datatext_copy']['type'];</php>
+                  </td>
+                  <td scope="row" align="left" valign="top"><{$v['datatext_copy']['value']}></td>
+                  <td scope="row" align="left" valign="top"><{$v['datatext_copy']['shenhe_remark']}></td>
                   <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$v['time']);</php></td>
                   <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$v['parentID']}>);">
+              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo_item(<{$v['datatext_copy']['parentID']}>);">
                   </td>
                 </tr>
                 <php> }}</php>
@@ -152,23 +156,27 @@
                 <php>if($markpos == '报账单'){</php>
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:200px;"><div> 标题 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:300px;"><div> 团名（单项服务名） </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 团期 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 类型 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 审核阶段 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:200px;"><div> 备注说明 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 审核阶段 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:120px;"><div> 备注说明 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:120px;"><div> 提交时间 </div></th>
-                  <th scope="col" nowrap="nowrap" style="min-width:160px;"><div> 操作 </div></th>
+                  <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 操作 </div></th>
                 </tr>
-                <php> $i = -1; foreach($chanpin_list as $v){ $i++;</php>
+                <php> $i = -1; foreach($chanpin_list as $v){$i++; $datatext = simple_unserialize($v['datatext_copy']['datatext']);</php>
                 <tr height="40" class="evenListRowS1">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
-                  <td scope="row" align="left" valign="top"><{$v['title']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['type']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['shenhe_remark']}></td>
-                  <td scope="row" align="left" valign="top"><{$v['remark']}></td>
+                  <td scope="row" align="left" valign="top"><a href="<{:SITE_INDEX}>Chanpin/zituanbaozhang/baozhangID/<{$v['datatext_copy']['chanpinID']}>" target="_blank">
+                  <php>if($v['tuantitle_copy']) echo $v['tuantitle_copy']; else echo $v['title_copy']</php></a>
+                  </td>
+                  <td scope="row" align="left" valign="top"><{$v['tuanqi_copy']}></td>
+                  <td scope="row" align="left" valign="top"><{$v['datatext_copy']['type']}></td>
+                  <td scope="row" align="left" valign="top"><{$v['datatext_copy']['shenhe_remark']}></td>
+                  <td scope="row" align="left" valign="top"><{$datatext['remark']}></td>
                   <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$v['time']);</php></td>
                   <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$v['chanpinID']}>);">
+              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$v['datatext_copy']['chanpinID']}>);">
                   </td>
                 </tr>
                 <php> }}</php>
@@ -250,6 +258,9 @@
   </table>
 </div>
 <script language="javascript"> 
+function showinfo_item(baozhangID){
+	window.open('<{:SITE_INDEX}><{$chanpin_mark}>/zituanxiangmu/baozhangID/'+baozhangID);
+}
 function showinfo(baozhangID,parentID){
 	window.open('<{:SITE_INDEX}><{$chanpin_mark}>/zituanbaozhang/baozhangID/'+baozhangID);
 }
