--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -3,7 +3,7 @@
 <script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/Chanpin/xianlu.js"></script>
 
 <div id="main">
-  <include file="Chanpin:left_kongguan" />
+  <tp:includeCA file="Chanpin:left_fabu:'left_kongguan'" />
   <div id="content" style="margin-left:170px;">
     <div id="resultdiv" class="resultdiv"></div>
     <div id="resultdiv_2" class="resultdiv"></div>
@@ -87,16 +87,17 @@
         <tr height="20">
           <th scope="col" nowrap="nowrap"><input type="checkbox" value="" id="checkboxall" onclick="myCheckBoxSelect(this)"></th>
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 团号 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:300px; width:30%"><div> 产品名称 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 出团日期 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 成人/儿童价格修正 </div></th>
-          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 发布人 </div></th>
-          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 单位 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 操作人 </div></th>
+          <th scope="col" nowrap="nowrap"><div> 修正值 </div></th>
+          <th scope="col" nowrap="nowrap"><div> 名额 </div></th>
+          <th scope="col" nowrap="nowrap"><div> 确认/占位 </div></th>
+          <th scope="col" nowrap="nowrap"><div> 剩余 </div></th>
           <th scope="col" nowrap="nowrap"><div> 状态 </div></th>
           <th scope="col" nowrap="nowrap"><div> 锁状态 </div></th>
           <th scope="col" nowrap="nowrap"><div> 报账情况 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 创建时间 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 轨迹 </div></th>
         </tr>
           <php>
       
@@ -106,16 +107,17 @@
       <tr height="40" class="evenListRowS1">
         <td scope="row" align="left" valign="top"><input value="<{$v['chanpinID']}>" id="chanpinitem<{$i}>" type="checkbox" name="itemlist[]" class="checkboxitem"></td>
         <td scope="row" align="left" valign="top"><{$i+1}></td>
+        <td scope="row" align="left" valign="top"><a target="_blank" href="<{:SITE_INDEX}>Chanpin/zituanxinxi/chanpinID/<{$v['chanpinID']}>"><{$v['tuanhao']}></a></td>
         <td scope="row" align="left" valign="top"><a target="_blank" href="<{:SITE_INDEX}>Chanpin/zituanxinxi/chanpinID/<{$v['chanpinID']}>"><{$v['title_copy']}></a></td>
         <td scope="row" align="left" valign="top"><{$v['chutuanriqi']}></td>
-        <td scope="row" align="left" valign="top"><{$v['adultxiuzheng']}>/<{$v['childxiuzheng']}></td>
         <td scope="row" align="left" valign="top"><{$v['user_name']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['bumen_copy']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['status']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['islock']}></td>
-        <td scope="row" align="left" valign="top" style="min-width:50px;"><{$v['baozhang_remark']}></td>
-        <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$v['time']);</php></td>
-        <td scope="row" align="center" valign="top"><img onclick="showmessage(this,'<{$v['chanpinID']}>','线路','操作记录');showbox(this,'messageitem','r')" src="<{:__PUBLIC__}>/myerp/images/info_inline.gif" width="16" height="16" border="0" /></td>
+        <td scope="row" align="left" valign="top"><{$v['adultxiuzheng']}>/<{$v['childxiuzheng']}></td>
+        <td scope="row" align="left" valign="top"><{$v['renshu']}></td>
+        <td scope="row" align="left" valign="top"><php> echo number_format($v['queren_num'])</php>/<php> echo number_format($v['zhanwei_num'])</php></td>
+        <td scope="row" align="left" valign="top"><{$v['shengyu_num']}></td>
+        <td scope="row" align="left" valign="top"><{$v['status']}></td>
+        <td scope="row" align="left" valign="top"><{$v['islock']}></td>
+        <td scope="row" align="left" valign="top"><{$v['baozhang_remark']}></td>
       </tr>
       <php> }</php>
         </tbody>
