Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Dijie/xingcheng.html
+++ b/Myerp/Tpl/Dijie/xingcheng.html
@@ -83,6 +83,15 @@ function doprint(type){
           </tr>
           
           <tr>
+            <td valign="top" scope="row" style="min-width:100px;"> 旅游车号: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="carnumber" type="text" value="<{$datatext_xingcheng['carnumber']}>" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 驾驶员: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="carpilot" type="text" value="<{$datatext_xingcheng['carpilot']}>" ></td>
+            <td valign="top" scope="row" style="min-width:100px;"> 驾驶员电话: </td>
+            <td valign="top" scope="row" style="min-width:200px;"><input name="cartelnum" type="text" value="<{$datatext_xingcheng['cartelnum']}>" ></td>
+          </tr>
+          
+          <tr>
             <td valign="top" scope="row" style="min-width:100px;"> 全陪电话: </td>
             <td valign="top" scope="row" style="min-width:200px;"><input name="quanpeitelnum" type="text" value="<{$datatext_xingcheng['quanpeitelnum']}>" ></td>
             <td valign="top" scope="row" style="min-width:100px;"> 备注说明: </td>
