Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Dijie/print_travelnotice.html
+++ b/Myerp/Tpl/Dijie/print_travelnotice.html
@@ -214,7 +214,7 @@ p   {   page-break-after:auto;   }
     </tr>
   <tr>
     <td width="107" height="40">&nbsp;</td>
-    <td height="90" colspan="3" valign="top"><{$itinerary[remark]}></td>
+    <td height="90" colspan="3" valign="top"><{$djtuan['datatext_xingcheng'][remark]}></td>
     </tr>
 </table>
 <table class="table_01" border="0" cellspacing="0" cellpadding="0">
